--- a/.github/ISSUE_TEMPLATE/missing_park.yml
+++ b/.github/ISSUE_TEMPLATE/missing_park.yml
@@ -10,7 +10,7 @@ body:
       value: |
         Thanks for taking the time to report a missing or incorrect park!
 
-        **Please note that submitting a pull request with your proposed changes is an often quicker way of getting the changes onto the website!**
+        **NOTE: Submitting a pull request with your proposed changes is an often quicker way of getting the changes onto the website!**
   - type: input
     id: park-name
     attributes:
